adding route fixes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth": "0.0.9",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
